--- a/index.html
+++ b/index.html
@@ -12,8 +12,44 @@
 </head>
 
 <body class="gastronomia-body">
+
+	<div class="sticky-container">
 	
-	
+		<div class="row contenedor">
+		
+			<header class="column small-12 medium-12 large-12">
+				<div class="row">
+					<div class="column small-4" id="encabezado">
+						<div class="nombre"><h2>Tipico Santandereano</h2></div>
+						<div class="slogan"><strong>Lo Arrecho Del Sabor En Tu Boca</strong></div>
+					</div>
+				</div>			
+			</header>
+			
+		</div>
+			
+		<div class="row contenedor">
+		
+			<section class="column small-4 medium-4 large-4" id="busqueda">
+				<div>buscador</div>
+				<div>navegador</div>
+				<div>favoritos</div>
+				<div>historial</div>	
+			</section >
+		
+			<section class="column small-8 medium-8 large-8" id="contendio">
+				contenido
+			</section>			
+			
+		</div>	
+
+			
+
+
+
+		
+		
+	</div>
 	
 	<script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
